package com.warmhouse.monitoring.model.enums;

public enum AggregationType {
    HOURLY,
    DAILY,
    WEEKLY,
    MONTHLY
}
