package com.warmhouse.monitoring.model.enums;

public enum DeviceStatus {
    ONLINE,
    OFFLINE,
    MAINTENANCE,
    ERROR
}
